<resources>
    <string name="app_name">WeatherTask</string>
    <string name="humidity">Humidity :</string>
    <string name="wind">Wind</string>
    <string name="feelsLike">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="searchByCity">Search by city name…</string>
    <string name="needOfPerimission">Need location permission to show weather result of your location</string>
    <string name="location">Location</string>
    <string name="noDataFound">No data found</string>
    <string name="sunSet">Sunset</string>
    <string name="sunRise">Sunrise</string>
</resources>