<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackBG"
        tools:context=".views.weatherMainScreen.MainActivity">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/myLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/searchByCity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/minMax"
            app:layout_constraintEnd_toStartOf="@+id/temp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/temp" />


        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weatherIcon"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            tools:text="18" />

        <TextView
            android:id="@+id/Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/terkwaz"
            android:textSize="40sp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minMax"
            tools:text="Cairo,EG" />

        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/terkwaz"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Country"
            tools:text="Mostly Cloudly" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humidity"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/humidity"/>
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="88%"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/wind"/>
                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="88%"/>
                <TextView
                    android:id="@+id/windDirection"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="88%"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_feels_like"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/feelsLike"/>
                <TextView
                    android:id="@+id/feelsLike"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="88%"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pressure"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/pressure"/>
                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="88%"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sun"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/sunRise"/>
                <TextView
                    android:id="@+id/sunRise"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="5:30 am"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sun"
                    android:layout_margin="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    android:textSize="18sp"
                    android:text="@string/sunSet"/>
                <TextView
                    android:id="@+id/sunSet"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="6dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyBlue"
                    tools:text="5:30 am"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/minMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp"
            tools:text="23 / 23 " />

        <FrameLayout
            android:id="@+id/noData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/blackBG"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TextView
                android:id="@+id/emptyData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noDataFound"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp"
                app:drawableTopCompat="@drawable/ic_no_data" />
        </FrameLayout>

        <ImageView
            android:id="@+id/myLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_mylocation"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
